--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ li:hover {
   margin-left: 5vw;
   background-color: rgb(0, 0, 0);
   align-content: end;
+  border-left: 15px solid #f2bb05;
   /* height: 100%; */
   grid-area: 1 / 1 / 2 / 2;
 }
