--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ li:hover {
   background-color: rgb(0, 0, 0);
   align-content: end;
   border-left: 15px solid #f2bb05;
-  /* height: 100%; */
+  border-style: hidden hidden hidden dashed;
   grid-area: 1 / 1 / 2 / 2;
 }
 
